--- a/site/views/index.jade
+++ b/site/views/index.jade
@@ -4,3 +4,5 @@ block content
   h1= text.name
   div= text.body
   div= userid
+  
+  <iframe width="854" height="510" src="//www.youtube.com/embed/Se1y2R5QRKU" frameborder="0" allowfullscreen></iframe>
